# hideki-open-it

./: .gitignore  .gitmodules  README.md  SConstruct  credit.txt  icon.svg.import  meson.build  project.godot  theme.tres  translation.csv  translation.csv.import
backgrounds/: background0.png.import  background1.png.import  background2.png.import  background3.png.import  background4.png.import  pexels-abby-chung-1045615.webp.import  pexels-casia-charlie-2425464.webp.import  pexels-dsd-1829980.webp.import  pexels-evgeny-tchebotarev-2235302.webp.import  pexels-leeloo-the-first-5236398.webp.import  pexels-matt-hardy-2031687.webp.import  pexels-ryutaro-tsukata-5745864.webp.import  pexels-ryutaro-tsukata-6249546.webp.import  pexels-sunil-poudel-2758567.webp.import  pexels-tomáš-malík-3408353.webp.import
cpp/: AICPP.cpp  AICPP.hpp  register_types.cpp  register_types.h
design/: game.kra  game.png.import
fonts/: numbers.png.import
game/: cell.tscn  game.tscn
hideki-open-it-ai/: README.md  pyproject.toml
hideki-open-it-ai/hideki_open_it_ai/: __main__.py  game.py  game_simulation.py  game_types.py  neural_network.py
levels/: level1.tres  level10.tres  level11.tres  level12.tres  level13.tres  level14.tres  level15.tres  level16.tres  level17.tres  level18.tres  level2.tres  level3.tres  level4.tres  level5.tres  level6.tres  level7.tres  level8.tres  level9.tres  levels.ods
music/: PerituneMaterial_Sakuya(chosic.com).mp3.import  PerituneMaterial_Sakuya2(chosic.com).mp3.import  PerituneMaterial_Sakuya3(chosic.com).mp3.import  Yugen-Emotional-Ethnic-Music(chosic.com).mp3.import  yoitrax-ronin(chosic.com).mp3.import
resources/: level.gd  position.gd  state.gd
scenes/: cell.tscn  cell_ui.tscn  control.tscn  credits.tscn  custom.tscn  (+7 more)
(+166 files in other folders)
