[tool.poetry]
name = "hideki-open-it-ai"
version = "0.1.0"
description = "An attempt to create AI using a neural network genetic algorithm"
authors = ["Niko Honu <nikohonu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
numpy = "^1.26.3"
torchmetrics = "^1.3.0.post0"

[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.10.0"
python-lsp-ruff = "^2.0.2"
pylsp-mypy = "^0.6.8"
pylsp-rope = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hoiai = 'hideki_open_it_ai.__main__:main'

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false
